# My-AUR-Helper

./: .gitignore  AGENTS.md  SECURITY_AUDIT.md  index.html  opencode.jsonc  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  audit.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  logger.rs  main.rs
src-tauri/src/aur/: mod.rs  pkgbuild.rs  rpc.rs
src-tauri/src/backup/: execute.rs  mod.rs
src-tauri/src/checkers/: git_describe.rs  gitee.rs  github.rs  gitlab.rs  http.rs  manual.rs  mod.rs  redirect.rs  trait_def.rs  utils.rs
src-tauri/src/checkers/github/: api.rs  api_checker.rs  binary_check.rs  git_describe.rs  mod.rs  release.rs  repo_info.rs  tags.rs  tags_checker.rs
src-tauri/src/commands/: backup.rs  enums.rs  files.rs  files_scan.rs  logs.rs  mod.rs  proxy.rs  proxy_utils.rs  scan.rs  settings.rs  software.rs  software_check.rs  software_sync.rs  software_sync_pkgbuild.rs  software_sync_upstream.rs  software_sync_utils.rs  sys_command.rs  upstream_validate.rs
src-tauri/src/commands/files/: mod.rs
src-tauri/src/commands/software_sync/: aur.rs  (+4 more)
src-tauri/src/db/: aur_info.rs  backup_software.rs  cache_software.rs  enum_licenses.rs  enum_programming_languages.rs  logs.rs  migration.rs  migration_aur.rs  migration_enum.rs  migration_software.rs  migration_upstream.rs  mod.rs  proxies_info.rs  proxies_test.rs  schema.rs  seed.rs  settings.rs  software_info.rs  upstream_info.rs
src-tauri/src/errors/: db.rs  file.rs  mod.rs  network.rs  system.rs
src-tauri/src/models/: aur_info.rs  backup_software.rs  cache_software.rs  checker_type.rs  enum_license.rs  enum_programming_language.rs  log_entry.rs  mod.rs  package_type.rs  proxy_info.rs  proxy_test.rs  proxy_type.rs  setting.rs  software_detail.rs  software_info.rs  software_list_entry.rs  upstream_info.rs
src-tauri/src/proxy/: fetch.rs  mod.rs  test.rs
src-tauri/src/scan/: mod.rs
src-tauri/src/versions/: aur.rs  comparison.rs  git_version.rs  mod.rs  rules.rs  upstream.rs
(+72 files in other folders)
