# ====================================================================
# My-AUR-Helper Rust 项目配置 (Cargo.toml)
# 定义 Rust crate 元数据、依赖关系和构建配置
# ====================================================================

[package]
# name: crate 名称，也是生成的二进制/库名称
name = "my-aur-helper"
# version: crate 版本号，与前端版本保持一致
version = "0.1.0"
# edition: Rust 语言版本，2021 是 Rust 1.56+ 的默认 edition
edition = "2021"

[lib]
# lib name: 库模块的名称（在 Rust 代码中用下划线代替连字符）
name = "my_aur_helper_lib"
# crate-type: 生成多种库格式：
#   staticlib - 静态链接库 (.a)
#   cdylib    - 动态链接库 (.so/.dylib/.dll)
#   rlib      - Rust 原生库（默认）
crate-type = ["staticlib", "cdylib", "rlib"]

# build-dependencies: 仅在构建脚本（build.rs）中使用的依赖
[build-dependencies]
# tauri-build: Tauri 构建辅助工具，负责资源打包、图标转换等
tauri-build = { version = "2", features = [] }

# dependencies: 运行时依赖
[dependencies]
# tauri: Tauri 桌面框架核心，启用 tray-icon（系统托盘图标）功能
tauri = { version = "2", features = ["tray-icon"] }
# tauri-plugin-log: Tauri 日志插件，将 Rust 日志转发到前端
tauri-plugin-log = "2"
# tauri-plugin-shell: Tauri Shell 插件，允许运行系统命令（如 pacman）
tauri-plugin-shell = "2"
# serde: 序列化/反序列化框架，用于 Rust ↔ JSON 的数据转换
serde = { version = "1", features = ["derive"] }
# serde_json: JSON 序列化/反序列化库
serde_json = "1"
# rusqlite: SQLite 数据库驱动，bundled 表示编译时捆绑 SQLite，chrono 启用时间类型支持
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
# reqwest: HTTP 客户端，用于 AUR API 调用和版本检查
reqwest = { version = "0.12", features = ["json"] }
# tokio: 异步运行时，full 特性启用所有组件
tokio = { version = "1", features = ["full"] }
# chrono: 日期时间处理库，serde 特性启用序列化支持
chrono = { version = "0.4", features = ["serde"] }
# anyhow: 灵活的 Rust 错误处理库，支持任意错误类型
anyhow = "1"
# thiserror: 派生宏，简化自定义错误类型的实现
thiserror = "1"
# async-trait: 允许在 trait 中定义 async 方法
async-trait = "0.1"
# regex: 正则表达式库，用于 PKGBUILD 解析
regex = "1"
# url: URL 解析和格式化库
url = "2"
# csv: CSV 解析库，用于处理许可证等 CSV 数据
csv = "1"
# dirs: 获取系统标准目录（如家目录、缓存目录等）
dirs = "5"
# log: Rust 标准日志 API facade（兼容层）
log = "0.4"
